# plankton-engine

./: Cargo.toml  README.md  rustfmt.toml
src/: game.rs  lib.rs  magics.rs  main.rs  movegen.rs  moveutil.rs  piecemove.rs  prevgamestate.rs  pstables.rs  specialmove.rs
