[package]
name = "plankton_engine"
version = "0.1.0"
authors = ["Osrepnay"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[lib]
name = "plankton_engine"
path = "src/lib.rs"

[[bin]]
name = "plankton_engine"
path = "src/main.rs"