[package]
name = "plankton"
version = "0.2.1"
authors = ["Osrepnay"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tinyvec = { version = "1.1.1", features = ["rustc_1_40"] }
num_cpus = "1"

[lib]
name = "plankton"
path = "src/lib.rs"

[[bin]]
name = "plankton"
path = "src/main.rs"
